fixed the too dark href in the footer to be a bit more visible

--- a/src/main.scss
+++ b/src/main.scss
@@ -200,5 +200,14 @@ input {
     justify-content: center;
     font-size: 12px;
     color: $secondaryText;
+
+    a {
+      color: $secondaryText;
+      transition: color 0.2s ease-in-out;
+
+      &:hover {
+        color: $accent;
+      }
+    }
   }
 }
